--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<a href="index.html">DATA SCIENCE</a>
 				</div>
 			</div>
-			
+
 			<div class="image_top" >
 				
 			</div>
@@ -70,12 +70,12 @@
 					Now, masses get confused between data analyst and data scientist.					
 				</div>
 				<div class="row">
-					<div class = "col-md-6">
+					<div class = "col-md-6" data-aos="fade-right" data-aos-duration ="700">
 						<div class="row-heading">DATA ANALYST</div>
 						The main difference is that, a data analyst does the buisness administration and perform exploratory data analysis.
 						Although the data is being explored by data analyst , the information was not being used anywhere.
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-6" data-aos="fade-left" data-aos-duration ="700">
 						<div class="row-heading">DATA SCIENTIST</div>
 						On the other hand, the responsibilites of a data scientist includes exploratory data analysis , machine learning and advanced algorithms and data product engineering.
 					</div>
@@ -91,16 +91,16 @@
 										CHECK OUT OUR HOW TO START TO BECOME A DATA SCIENTIST AND OTHER POPULAR PAGES
 				</div>
 				<div class="row">
-					<div class = "col-md-2">
+					<div class = "col-md-2" data-aos="fade-right" data-aos-duration ="700">
 						<a href="howto.html">HOW TO START?</a>		
 					</div>
-					<div class="col-md-2">
-						<a href="machinelearning.html">MACHINE LEARNING</a>
+					<div class="col-md-2" data-aos="fade-left" data-aos-duration ="700">
+						<a href="machinelearning.html" >MACHINE LEARNING</a>
 					</div>
-					<div class="col-md-2">
-						<a href="deeplearning.html">DEEP LEARNING</a>
+					<div class="col-md-2" data-aos="fade-right" data-aos-duration ="700">
+						<a href="deeplearning.html" >DEEP LEARNING</a>
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-2" data-aos="fade-left" data-aos-duration ="700">
 						<a href="mathsbehindmachinelearning.html">MATHS BEHIND ML</a>
 					</div>
 				</div>
@@ -112,6 +112,7 @@
 				<a href="#" class="fa fa-twitter logo2" style="font-size: 48px;color:white;text-decoration: none;"></a>
 				<a href="#" class="fa fa-instagram logo3"style="font-size: 48px;color:white;text-decoration: none;" ></a>
 				<a href="#" class="fa fa-linkedin logo4"style="font-size: 48px;color:white;text-decoration: none;"></a>
+				<div class="copyr">&copy; GAGANDEEP</div>
 				<div class="triangle"></div>
 			</div>
 		</div>	
