--- a/regressiontreefromscratch.html
+++ b/regressiontreefromscratch.html
@@ -11,6 +11,7 @@
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
 	<body>
