--- a/howto.html
+++ b/howto.html
@@ -32,17 +32,17 @@
 					Then, you can move on to the intresting part i.e. machine learning and deep learning. On this page you'll find the instructions for maths. Refer to our other pages for ML and DL.
 				</div>
 				<div class="row">
-					<div class = "col-md-2">
+					<div class = "col-md-2" data-aos="fade-right" data-aos-duration ="700">
 						<a href="howto.html">MATHS</a>		
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-2" data-aos="fade-left" data-aos-duration ="700">
 						<a href="mathsbehindmachinelearning.html">MATHS BEHIND ML</a>
 						
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-2" data-aos="fade-left" data-aos-duration ="700" >
 						<a href="machinelearning.html">MACHINE LEARNING</a>
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-2" data-aos="fade-right" data-aos-duration ="700">
 						<a href="deeplearning.html">DEEP LEARNING</a>
 					</div>
 				</div>
@@ -61,17 +61,17 @@
 
 				</div>
 				<div class="row">
-					<div class = "col-md-2">
+					<div class = "col-md-2" data-aos="fade-right" data-aos-duration ="700">
 						<a href="https://ocw.mit.edu/courses/mathematics/18-06-linear-algebra-spring-2010/">Linear Algebra</a>		
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-2" data-aos="fade-left" data-aos-duration ="700">
 						<a href="https://www.youtube.com/watch?v=WUvTyaaNkzM&list=PL0-GT3co4r2wlh6UHTUeQsrf3mlS2lk6x">Calculus</a>
 						
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-2" data-aos="fade-right" data-aos-duration ="700">
 						<a href="https://medium.com/@rathi.ankit/probability-statistics-for-data-science-series-83b94353ca48"> Statistics</a>
 					</div>
-					<div class="col-md-2">
+					<div class="col-md-2" data-aos="fade-left" data-aos-duration ="700">
 						<a href="https://medium.com/@rathi.ankit/probability-statistics-for-data-science-series-83b94353ca48">Probability</a>
 					</div>
 				</div>
@@ -92,5 +92,8 @@
 				<div class="triangle"></div>
 			</div>
 		</div>	
+		<script>
+		  AOS.init();
+		</script> 
 	</body>
 </html>
